--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "dist/couchbase.js",
   "types": "dist/couchbase.d.ts",
   "license": "Apache-2.0",
-  "name": "couchbase",
+  "name": "couchbase-esm",
   "dependencies": {
     "cmake-js": "^7.3.0",
     "node-addon-api": "^8.0.0"
@@ -59,7 +59,7 @@
     "native": false
   },
   "scripts": {
-    "install": "node ./scripts/install.js",
+    "install": "if [ ! -d ./dist/couchbase.js ]; then node ./scripts/install.js; fi",
     "build": "cmake-js build && tsc",
     "rebuild": "cmake-js rebuild && tsc",
     "prebuild": "node ./scripts/buildPrebuild.js",
