Removed redundant files and set entry in package.json

--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   "license": "Apache-2.0",
   "name": "couchbase-esm",
   "dependencies": {
-    "cmake-js": "^7.3.0",
-    "node-addon-api": "^8.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -59,19 +57,7 @@
     "native": false
   },
   "scripts": {
-    "install": "if [ ! -f ./dist/couchbase.js ]; then node ./scripts/install.js; fi",
-    "build": "cmake-js build && tsc",
-    "rebuild": "cmake-js rebuild && tsc",
-    "prebuild": "node ./scripts/buildPrebuild.js",
-    "prepare": "tsc",
-    "help-prune": "node ./scripts/prune.js",
-    "build-docs": "typedoc",
-    "test": "ts-mocha test/*.test.*",
-    "test-fast": "ts-mocha test/*.test.* -ig '(slow)'",
-    "cover": "nyc ts-mocha test/*.test.*",
-    "cover-fast": "nyc ts-mocha test/*.test.* -ig '(slow)'",
-    "lint": "eslint ./lib/ ./test/",
-    "check-deps": "ncu"
+    "install": "",
   },
   "binary": {
     "napi_versions": [
@@ -79,91 +65,8 @@
     ]
   },
   "optionalDependencies": {
-    "@couchbase/couchbase-darwin-arm64-napi": "4.4.2",
-    "@couchbase/couchbase-darwin-x64-napi": "4.4.2",
-    "@couchbase/couchbase-linux-arm64-napi": "4.4.2",
-    "@couchbase/couchbase-linuxmusl-arm64-napi": "4.4.2",
-    "@couchbase/couchbase-linuxmusl-x64-napi": "4.4.2",
-    "@couchbase/couchbase-linux-x64-napi": "4.4.2",
-    "@couchbase/couchbase-win32-x64-napi": "4.4.2"
   },
   "files": [
-    "LICENSE",
-    "CMakeLists.txt",
-    "CONTRIBUTING.md",
-    "package.json",
-    "README.md",
-    "couchbase-sdk-nodejs-black-duck-manifest.yaml",
-    "scripts/*.js",
-    "src/*.{c,h}pp",
-    "dist/*.{t,j}s",
-    "tools/*.{py,js}",
-    "deps/couchbase-cxx-client/CMakeLists.txt",
-    "deps/couchbase-cxx-client/LICENSE.txt",
-    "deps/couchbase-cxx-client/couchbase-sdk-cxx-black-duck-manifest.yaml",
-    "deps/couchbase-cxx-client/cmake/**",
-    "deps/couchbase-cxx-client/core/**/*",
-    "deps/couchbase-cxx-client/couchbase/**/*",
-    "deps/couchbase-cxx-client/third_party/expected/COPYING",
-    "deps/couchbase-cxx-client/third_party/expected/include/**/*",
-    "deps/couchbase-cxx-client/third_party/jsonsl/*",
-    "deps/couchbase-cxx-cache/json/*/json/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/json/*/json/LICENSE*",
-    "deps/couchbase-cxx-cache/json/*/json/external/PEGTL/.cmake/**",
-    "deps/couchbase-cxx-cache/json/*/json/external/PEGTL/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/json/*/json/external/PEGTL/LICENSE*",
-    "deps/couchbase-cxx-cache/json/*/json/external/PEGTL/include/**/*",
-    "deps/couchbase-cxx-cache/json/*/json/include/**/*",
-    "deps/couchbase-cxx-cache/cpm/*.cmake",
-    "deps/couchbase-cxx-cache/asio/*/LICENSE*",
-    "deps/couchbase-cxx-cache/asio/*/asio/COPYING",
-    "deps/couchbase-cxx-cache/asio/*/asio/asio/include/*.hpp",
-    "deps/couchbase-cxx-cache/asio/*/asio/asio/include/asio/**/*.[hi]pp",
-    "deps/couchbase-cxx-cache/asio/*/asio/asio/src/asio.cpp",
-    "deps/couchbase-cxx-cache/asio/*/asio/asio/src/asio_ssl.cpp",
-    "deps/couchbase-cxx-cache/boringssl/*/boringssl/**/*.{cc,h,c,asm,S}",
-    "deps/couchbase-cxx-cache/boringssl/*/boringssl/**/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/boringssl/*/boringssl/LICENSE",
-    "deps/couchbase-cxx-cache/fmt/*/fmt/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/fmt/*/fmt/ChangeLog.md",
-    "deps/couchbase-cxx-cache/fmt/*/fmt/LICENSE",
-    "deps/couchbase-cxx-cache/fmt/*/fmt/README.md",
-    "deps/couchbase-cxx-cache/fmt/*/fmt/include/**/*",
-    "deps/couchbase-cxx-cache/fmt/*/fmt/src/**/*",
-    "deps/couchbase-cxx-cache/fmt/*/fmt/support/cmake/**/*",
-    "deps/couchbase-cxx-cache/gsl/*/gsl/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/gsl/*/gsl/GSL.natvis",
-    "deps/couchbase-cxx-cache/gsl/*/gsl/LICENSE*",
-    "deps/couchbase-cxx-cache/gsl/*/gsl/ThirdPartyNotices.txt",
-    "deps/couchbase-cxx-cache/gsl/*/gsl/cmake/**",
-    "deps/couchbase-cxx-cache/gsl/*/gsl/include/**/*",
-    "deps/couchbase-cxx-cache/hdr_histogram/*/hdr_histogram/*.pc.in",
-    "deps/couchbase-cxx-cache/hdr_histogram/*/hdr_histogram/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/hdr_histogram/*/hdr_histogram/COPYING.txt",
-    "deps/couchbase-cxx-cache/hdr_histogram/*/hdr_histogram/LICENSE.txt",
-    "deps/couchbase-cxx-cache/hdr_histogram/*/hdr_histogram/cmake/**",
-    "deps/couchbase-cxx-cache/hdr_histogram/*/hdr_histogram/config.cmake.in",
-    "deps/couchbase-cxx-cache/hdr_histogram/*/hdr_histogram/include/**/*",
-    "deps/couchbase-cxx-cache/hdr_histogram/*/hdr_histogram/src/**/*",
-    "deps/couchbase-cxx-cache/llhttp/*/llhttp/*.pc.in",
-    "deps/couchbase-cxx-cache/llhttp/*/llhttp/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/llhttp/*/llhttp/LICENSE*",
-    "deps/couchbase-cxx-cache/llhttp/*/llhttp/include/*.h",
-    "deps/couchbase-cxx-cache/llhttp/*/llhttp/src/*.c",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/COPYING",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/cmake/**",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/snappy-c.{h,cc}",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/snappy-internal.h",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/snappy-sinksource.{h,cc}",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/snappy-stubs-internal.{h,cc}",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/snappy-stubs-public.h.in",
-    "deps/couchbase-cxx-cache/snappy/*/snappy/snappy.{h,cc}",
-    "deps/couchbase-cxx-cache/spdlog/*/spdlog/CMakeLists.txt",
-    "deps/couchbase-cxx-cache/spdlog/*/spdlog/LICENSE",
-    "deps/couchbase-cxx-cache/spdlog/*/spdlog/cmake/**",
-    "deps/couchbase-cxx-cache/spdlog/*/spdlog/include/**/*",
-    "deps/couchbase-cxx-cache/spdlog/*/spdlog/src/**/*",
-    "deps/couchbase-cxx-cache/mozilla-ca-bundle.*"
+    "LICENSE",  "CONTRIBUTING.md", "package.json", "README.md", "couchbase-sdk-nodejs-black-duck-manifest.yaml", "dist/*.{t,j}s", "tools/*.{py,js}",
   ]
 }
