--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   "types": "dist/couchbase.d.ts",
   "license": "Apache-2.0",
   "name": "couchbase-esm",
-  "dependencies": {
-  },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node12": "^12.1.3",
@@ -56,8 +54,6 @@
   "config": {
     "native": false
   },
-  "scripts": {
-  },
   "binary": {
     "napi_versions": [
       6
@@ -66,6 +62,6 @@
   "optionalDependencies": {
   },
   "files": [
-    "LICENSE",  "CONTRIBUTING.md", "package.json", "README.md", "couchbase-sdk-nodejs-black-duck-manifest.yaml", "dist/*.{t,j}s", "tools/*.{py,js}",
+    "LICENSE",  "CONTRIBUTING.md", "package.json", "README.md", "couchbase-sdk-nodejs-black-duck-manifest.yaml", "dist/*.{t,j}s", "tools/*.{py,js}"
   ]
 }
