--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "optionalDependencies": {
   },
   "files": [
-    "LICENSE",  "CONTRIBUTING.md", "package.json", "README.md", "couchbase-sdk-nodejs-black-duck-manifest.yaml", "dist/*.{t,j}s", "tools/*.{py,js}"
+    "LICENSE",  "CONTRIBUTING.md", "package.json", "README.md", "couchbase-sdk-nodejs-black-duck-manifest.yaml", "dist/*.{t,j}s", "tools/*.{py,js}", "scripts/*.js",
+
   ]
 }
